--- a/css/styles.css
+++ b/css/styles.css
@@ -198,7 +198,7 @@ ul {
   color: var(--accent-color);
 }
 /* не розумію-чому не спрацьовує??? */
-.projects-title.link {
+.project-cards {
   text-decoration: none;
 }
 /* ---FOOTER---*/
@@ -209,6 +209,7 @@ ul {
 /* logo */
 .logo-web-footer {
   color: var(--secondary-text-color);
+  font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
