--- a/css/styles.css
+++ b/css/styles.css
@@ -147,24 +147,22 @@ ul {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
-  text-align: center;
 }
 .team-title-text {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
-  text-align: center;
 }
 .team-text {
   font-size: 16px;
   line-height: 1.19;
-  text-align: center;
 }
 
 /* ---MAIN---PORTFOLIO */
 
 .projects-btn {
   color: var(--section-title-text);
+  background-color: var(--section-bg-color);
   font-family: 'Roboto';
   font-weight: 500;
   font-size: 16px;
